# rs-screen-translate

./: .gitignore  Cargo.toml
src/: capture.rs  main.rs  routes.rs  structs.rs
static/css/: styles.css
static/js/: index.js
templates/: index.html
